# kt

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/: release-drafter.yml
.github/workflows/: release.yaml  tests.yaml
src/kt/: cli.py  ktistec_handler.py  message_builder.py  profile.py  util.py
tests/: test_ktistec_handler.py  test_message_builder.py  test_profile.py  test_util.py
tests/resources/ktistec_handler/: dummy_sessions_response_body
tests/resources/profile/: dummy_profile
