[tool.poetry]
name = "kt"
version = "0.1.0"
description = ""
authors = ["stereographica <stereographica@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
marshmallow = "^3.19.0"
marshmallow-dataclass = "^8.5.11"

[tool.poetry.scripts]
kt = "kt.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''
