[tool.poetry]
name = "kt"
version = "0.2.0"
description = ""
authors = ["stereographica <stereographica@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
toml = "^0.10.2"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"
tabulate = "^0.9.0"

[tool.poetry.scripts]
kt = "kt.cli:main"
ktctl = "kt.cli:ctl_main"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
types-requests = "^2.28.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 80
multi_line_output = 3
